phone-book-deployment/backend-deployment/src/backend-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phone-book-services
  labels:
    app.kubernetes.io/name: phone-book-services
