phone-book-deployment/backend-deployment/src/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phone-book-backend-deployment
  namespace: phone-book-services
  labels:
    app.kubernetes.io/name: phone-book-services
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: phone-book-backend-deployment
  template:
    metadata:
      name: phone-book-backend-pod
      namespace: phone-book-services
      labels:
        app.kubernetes.io/name: phone-book-backend-deployment
    spec:
      containers:
        # auth-proxy container configuration (sidecar)
        - name: auth-proxy
          image: cdprete/phone-book-auth-proxy
          ports:
            - containerPort: 8080
          livenessProbe:
            periodSeconds: 30
            initialDelaySeconds: 15
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          readinessProbe:
            periodSeconds: 30
            initialDelaySeconds: 15
            httpGet:
              port: 8080
              path: /actuator/health/readiness
          volumeMounts:
            - mountPath: /home/jboss/config/application-prod.yaml
              subPath: application-prod.yaml
              name: auth-proxy-application-yaml

        # backend container configuration
        - name: backend
          image: cdprete/phone-book-backend
          ports:
            - containerPort: 8081
          livenessProbe:
            periodSeconds: 30
            initialDelaySeconds: 15
            httpGet:
              port: 8081
              path: /phone-book/actuator/health/liveness
          readinessProbe:
            periodSeconds: 30
            initialDelaySeconds: 15
            httpGet:
              port: 8081
              path: /phone-book/actuator/health/readiness
          volumeMounts:
            - mountPath: /home/jboss/config/application-prod.yaml
              subPath: application-prod.yaml
              name: backend-application-yaml
      volumes:
        - name: backend-application-yaml
          configMap:
            name: phone-book-backend-application-yaml
        - name: auth-proxy-application-yaml
          configMap:
            name: phone-book-auth-proxy-application-yaml
